--- a/Andhra.html
+++ b/Andhra.html
@@ -10,6 +10,12 @@ body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
 body {font-size:16px;}
 .w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
 .w3-half img:hover{opacity:1}
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 </style>
 <head>
 <script data-ad-client="ca-pub-4896942779776929" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -85,121 +91,121 @@ body {font-size:16px;}
 <th title="Field #7">Total Deaths</th>
 </tr></thead>
 <tbody><tr>
-<td align="right">1</td>
-<td>Anantapur    </td>
-<td align="right">0</td>
-<td align="right">122</td>
-<td align="right">25</td>
-<td align="right">93</td>
-<td align="right">4</td>
+<td align="center">1</td>
+<td align="center">Anantapur    </td>
+<td align="center">0</td>
+<td align="center">122</td>
+<td align="center">25</td>
+<td align="center">93</td>
+<td align="center">4</td>
 </tr>
 <tr>
-<td align="right">2</td>
-<td>Chittoor</td>
-<td align="right">8</td>
-<td align="right">173</td>
-<td align="right">96</td>
-<td align="right">77</td>
-<td align="right">0</td>
+<td align="center">2</td>
+<td align="center">Chittoor</td>
+<td align="center">8</td>
+<td align="center">173</td>
+<td align="center">96</td>
+<td align="center">77</td>
+<td align="center">0</td>
 </tr>
 <tr>
-<td align="right">3</td>
-<td>East Godavari</td>
-<td align="right">0</td>
-<td align="right">52</td>
-<td align="right">14</td>
-<td align="right">38</td>
-<td align="right">0</td>
+<td align="center">3</td>
+<td align="center">East Godavari</td>
+<td align="center">0</td>
+<td align="center">52</td>
+<td align="center">14</td>
+<td align="center">38</td>
+<td align="center">0</td>
 </tr>
 <tr>
-<td align="right">4</td>
-<td>Guntur</td>
-<td align="right">9</td>
-<td align="right">413</td>
-<td align="right">148</td>
-<td align="right">257</td>
-<td align="right">8</td>
+<td align="center">4</td>
+<td align="center">Guntur</td>
+<td align="center">9</td>
+<td align="center">413</td>
+<td align="center">148</td>
+<td align="center">257</td>
+<td align="center">8</td>
 </tr>
 <tr>
-<td align="right">5</td>
-<td>Kadapa</td>
-<td align="right">1</td>
-<td align="right">102</td>
-<td align="right">37</td>
-<td align="right">65</td>
-<td align="right">0</td>
+<td align="center">5</td>
+<td align="center">Kadapa</td>
+<td align="center">1</td>
+<td align="center">102</td>
+<td align="center">37</td>
+<td align="center">65</td>
+<td align="center">0</td>
 </tr>
 <tr>
-<td align="right">6</td>
-<td>Krishna</td>
-<td align="right">7</td>
-<td align="right">367</td>
-<td align="right">142</td>
-<td align="right">211</td>
-<td align="right">14</td>
+<td align="center">6</td>
+<td align="center">Krishna</td>
+<td align="center">7</td>
+<td align="center">367</td>
+<td align="center">142</td>
+<td align="center">211</td>
+<td align="center">14</td>
 </tr>
 <tr>
-<td align="right">7</td>
-<td>Kurnool</td>
-<td align="right">9</td>
-<td align="right">608</td>
-<td align="right">199</td>
-<td align="right">390</td>
-<td align="right">19</td>
+<td align="center">7</td>
+<td align="center">Kurnool</td>
+<td align="center">9</td>
+<td align="center">608</td>
+<td align="center">199</td>
+<td align="center">390</td>
+<td align="center">19</td>
 </tr>
 <tr>
-<td align="right">8</td>
-<td>Nellore</td>
-<td align="right">9</td>
-<td align="right">149</td>
-<td align="right">65</td>
-<td align="right">81</td>
-<td align="right">3</td>
+<td align="center">8</td>
+<td align="center">Nellore</td>
+<td align="center">9</td>
+<td align="center">149</td>
+<td align="center">65</td>
+<td align="center">81</td>
+<td align="center">3</td>
 </tr>
 <tr>
-<td align="right">9</td>
-<td>Prakasam</td>
-<td align="right">0</td>
-<td align="right">63</td>
-<td align="right">0</td>
-<td align="right">63</td>
-<td align="right">0</td>
+<td align="center">9</td>
+<td align="center">Prakasam</td>
+<td align="center">0</td>
+<td align="center">63</td>
+<td align="center">0</td>
+<td align="center">63</td>
+<td align="center">0</td>
 </tr>
 <tr>
-<td align="right">10</td>
-<td>Srikakulam</td>
-<td align="right">0</td>
-<td align="right">7</td>
-<td align="right">3</td>
-<td align="right">4</td>
-<td align="right">0</td>
+<td align="center">10</td>
+<td align="center">Srikakulam</td>
+<td align="center">0</td>
+<td align="center">7</td>
+<td align="center">3</td>
+<td align="center">4</td>
+<td align="center">0</td>
 </tr>
 <tr>
-<td align="right">11</td>
-<td>Vishakhapatnam</td>
-<td align="right">4</td>
-<td align="right">72</td>
-<td align="right">45</td>
-<td align="right">26</td>
-<td align="right">1</td>
+<td align="center">11</td>
+<td align="center">Vishakhapatnam</td>
+<td align="center">4</td>
+<td align="center">72</td>
+<td align="center">45</td>
+<td align="center">26</td>
+<td align="center">1</td>
 </tr>
 <tr>
-<td align="right">12</td>
-<td>Vizianagaram</td>
-<td align="right">0</td>
-<td align="right">7</td>
-<td align="right">7</td>
-<td align="right">0</td>
-<td align="right">0</td>
+<td align="center">12</td>
+<td align="center">Vizianagaram</td>
+<td align="center">0</td>
+<td align="center">7</td>
+<td align="center">7</td>
+<td align="center">0</td>
+<td align="center">0</td>
 </tr>
 <tr>
-<td align="right">13</td>
-<td>West Godavari</td>
-<td align="right">1</td>
-<td align="right">70</td>
-<td align="right">22</td>
-<td align="right">48</td>
-<td align="right">0</td>
+<td align="center">13</td>
+<td align="center">West Godavari</td>
+<td align="center">1</td>
+<td align="center">70</td>
+<td align="center">22</td>
+<td align="center">48</td>
+<td align="center">0</td>
 </tr>
 </tbody>
 </table>
@@ -207,7 +213,18 @@ body {font-size:16px;}
 
 <!-- End page content -->
 </div>
-
+<h1 align="center">Anantapur dist coronovirus </h1>
+<img src="images/1.PNG" class="center">
+<h1 align="center">Kurnool dist coronovirus </h1>
+<img src="images/Kurnool.PNG" class="center">
+<h1 align="center">Chittoor dist coronovirus </h1>
+<img src="images/ch.PNG" class="center">
+<h1 align="center">Krishna dist coronovirus </h1>
+<img src="images/krishna.PNG" class="center">
+<h1 align="center">Guntur dist coronovirus </h1>
+<img src="images/guntur.PNG" class="center">
+<h1 align="center">East Godavari dist coronovirus </h1>
+<img src="images/wg.PNG" class="center">
 <!-- W3.CSS Container -->
 <div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right"> <a href="https://www.w3schools.com/w3css/default.asp" title="" target="_blank" class="w3-hover-opacity"></a></p></div>
 
