font changes to andhr

--- a/Andhra.html
+++ b/Andhra.html
@@ -62,23 +62,23 @@ body {font-size:16px;}
  <div id="maincounter-wrap" style="margin-top:13px">
   <div id="maincounter-wrap" style="margin-top:13px">
  
-<h1 align="center">Andhra Pradesh Coronovirus Count</h1>
+<h2 align="center">Andhra Pradesh Coronovirus</h2>
 
-<h3 align="center">Total Cases:2205</h3>
+<h4 align="center">Total Cases:2205</h4>
 <div class="data-table table-responsive">
 <div id="maincounter-wrap" style="margin-top:13px">
- <h3 align="center">Active Cases:803</h3>	
+ <h4 align="center">Active Cases:803</h4>	
 </div>
 <div id="maincounter-wrap" style="margin-top:13px">
- <h3 align="center">Deaths:49</h3>
+ <h4 align="center">Deaths:49</h4>
 </div>
 <div id="maincounter-wrap" style="margin-top:13px;">
-<h3 align="center">Recovered:1353</h3>
+<h4 align="center">Recovered:1353</h4>
 </div>
 <div id="maincounter-wrap" style="margin-top:13px;">
-<h3 align="center">New Cases:48</h3>
+<h4 align="center">New Cases:48</h4>
 </div>
-<h2 align="center"><a class="open-table" >COVID19 District  wise </a></h2>
+<h3 align="center"><a class="open-table" >COVID19 District  wise </a></h3>
 <table border="1" cellspacing="1" cellpadding="1"  class="table table-striped" style="font-weight:bold" align="center">
 
 
