--- a/Andhra.html
+++ b/Andhra.html
@@ -79,6 +79,7 @@ body {font-size:16px;}
 <h4 align="center">New Cases:48</h4>
 </div>
 <h3 align="center"><a class="open-table" >COVID19 District  wise </a></h3>
+<div style="overflow-x:auto;">
 <table border="1" cellspacing="1" cellpadding="1"  class="table table-striped" style="font-weight:bold" align="center">
 
 
@@ -209,7 +210,7 @@ body {font-size:16px;}
 </tr>
 </tbody>
 </table>
-
+</div>
 
 <!-- End page content -->
 </div>
