--- a/Andhra.html
+++ b/Andhra.html
@@ -79,14 +79,13 @@ body {font-size:16px;}
 <h4 align="center">New Cases:48</h4>
 </div>
 <h3 align="center"><a class="open-table" >COVID19 District  wise </a></h3>
-<div style="overflow-x:auto;">
-<table border="1" cellspacing="1" cellpadding="1"  class="table table-striped" style="font-weight:bold" align="center">
+<table border="1" cellspacing="1" cellpadding="1"  class="table table-striped" style="font-weight:bold" >
 
 
 <thead><tr><th title="Field #1">S.No</th>
 <th title="Field #2">District</th>
 <th title="Field #3">New Cases</th>
-<th title="Field #4">Total Positive cases</th>
+<th title="Field #4">Total cases</th>
 <th title="Field #5">Active cases</th>
 <th title="Field #6">Discharged</th>
 <th title="Field #7">Total Deaths</th>
@@ -210,7 +209,7 @@ body {font-size:16px;}
 </tr>
 </tbody>
 </table>
-</div>
+
 
 <!-- End page content -->
 </div>
@@ -227,7 +226,7 @@ body {font-size:16px;}
 <h1 align="center">East Godavari dist coronovirus </h1>
 <img src="images/wg.PNG" class="center">
 <!-- W3.CSS Container -->
-<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:100px;padding-right:100px"><p class="w3-right"> <a href="https://www.w3schools.com/w3css/default.asp" title="" target="_blank" class="w3-hover-opacity"></a></p></div>
+<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:100px;padding-right:px"><p class="w3-right"> <a href="https://www.w3schools.com/w3css/default.asp" title="" target="_blank" class="w3-hover-opacity"></a></p></div>
 
 <script>
 // Script to open and close sidebar
